Fixes width issues in dialog when doing batch action (MMDB-1168) might need to perhaps remove some of those dialogs (eg removing a dataset takes two dialog boxes to pop up, only one needs to pop up, the second confirmation that they've been deleted could be a label somewhere); also added highlighting to background of a dataset when it's been selected to make it more visible

--- a/edu.illinois.ncsa.mmdb.web/war/mmdb.css
+++ b/edu.illinois.ncsa.mmdb.web/war/mmdb.css
@@ -937,6 +937,19 @@ a:hover {
 	padding: 20px;
 }
 
+.confirmDialog {
+	width: 275px;	
+}
+
+.confirmDialogButton {
+	width: 75px;	
+}
+
+.confirmDialogButtonNo{
+	width: 75px;
+	margin-left: 15px;	
+}
+
 .addToCollectionDialog {
 	text-align: center;
 	}
@@ -1273,6 +1286,10 @@ a:hover {
 .dynamicGridElement {
 	border: 1px solid #CCC;
 	margin: 10px;
+}
+
+.dynamicGridSelected {
+	background-color: #f1f5ff
 }
 
 .dynamicGridElementTitle {
